# argusd

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  argusd_auth.h  argusd_impl.cc  argusd_impl.h  argusd_server.cc  argusd_util.cc  docker-entrypoint.sh  fim_server.cc  fim_server.h  fimd_agent.go  fimd_auth.cc  fimd_auth.h  fimd_impl.cc  fimd_impl.h  fimd_server.cc  fimd_util.cc  fimd_util.h  health_impl.cc  health_impl.h  nsenter-example  server.c
Godeps/: Godeps.json
api/: fim.pb.go  fim.proto
cmake/: FindGlog.cmake
configs/: fimd.yaml
docs/: TECHNICAL_DETAILS.md
fim-proto/: CMakeLists.txt  README.md  fim.grpc.pb.cc  fim.grpc.pb.h  fim.pb.cc  fim.pb.h  fim.proto
fimnotify/: fimnotify.c  fimnotify.h
legacy/: CMakeLists.txt  README.md  fimd_agent.go
legacy/Godeps/: Godeps.json
legacy/fimnotify/: CMakeLists.txt
lib/: CMakeLists.txt  arguscache.c  arguscache.h  argusnotify.c  argusnotify.h  argustree.c  argustree.h  argusutil.c  argusutil.h  fimcache.c  fimcache.h  fimnotify.c  fimnotify.h  fimtree.c  fimtree.h  fimutil.c  fimutil.h
src/: argusd_auth.cc  argusd_auth.h  argusd_impl.cc  argusd_impl.h  argusd_server.cc  argusd_util.h  common.h  fim-inotify.c  fim.c  fim_inotify.c  fiminotify_cli.c  fiminotify_client.c  fiminotify_server.c  fimnotify_cli.c  fimnotify_client.c  fimnotify_server.c  health_impl.cc  health_impl.h  lib_fiminotify.c  lib_fiminotify.h
